--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kelvin Valencio
+title: Kelvin Valencio Blog
 email: kelvinvalencio@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Some posts about IT & Other things
