--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: kelvinvalencio@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Some blog posts about IT & Other things
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://kelvinvalencio.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kelvinvalencio.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kelvinvalencio
 github_username:  kelvinvalencio
 linkedin_username: kelvinvalencio
